# mim

./: .gitignore  Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: entry.rs  lib.rs  provider.rs  session.rs  tool.rs
agent/src/provider/: openai.rs
command/src/: main.rs
mim/: Cargo.toml
mim/src/: block.rs  border.rs  capture.rs  context.rs  editor.rs  format.rs  layout.rs  main.rs  message.rs  playback.rs  prompt.rs  render.rs  screen.rs  silero.rs  spinner.rs  tool.rs  voice.rs  widget.rs  width.rs
mim/src/widget/: block.rs  layout.rs  message.rs  paragraph.rs
scripts/: download-silero-vad.sh
