[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[features]
openai = ["dep:async-openai"]

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.34", features = ["responses"], optional = true }
futures = "0.3.32"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.44"
