[package]
name = "mim"
version = "0.1.0"
edition = "2021"

[features]
default = ["openai"]
openai = ["agent/openai"]

[dependencies]
agent = { path = "../agent" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.149"
serde = { version = "1", features = ["derive"] }
schemars = "1.2.1"
chrono = "0.4"
chrono-tz = "0.10"
reedline = "0.46.0"
tracing = "0.1.44"
