[package]
name = "mim"
version = "0.1.0"
edition = "2021"

[features]
default = ["capture", "openai"]
openai = ["agent/openai"]
capture = ["dep:cpal", "dep:ort", "dep:ndarray"]

[dependencies]
agent = { path = "../agent" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.149"
serde = { version = "1", features = ["derive"] }
schemars = "1.2.1"
chrono = "0.4"
chrono-tz = "0.10"
tracing = "0.1.44"
crossterm = { version = "0.29.0", features = ["event-stream", "bracketed-paste"] }
unicode-width = "0.2"
rand = "0.10.0"
libc = "0.2"
cpal = { version = "0.17.3", optional = true }
ort = { version = "=2.0.0-rc.10", features = ["ndarray"], optional = true }
ndarray = { version = "0.16", optional = true }
